--- a/src/index.css
+++ b/src/index.css
@@ -23,19 +23,22 @@ h1 {
 }
 
 #light {
-  background-color: whitesmoke;
+  background-color: rgb(215, 192, 192);
+  font-size: 20px;
 }
 #light .nav-link a {
   color: black;
 }
 
 #dark {
-  background-color: rgb(15, 14, 14);
+  background-color: rgb(31, 7, 7);
   color: #fff;
+  font-size: 20px;
 }
 
 #dark .nav-link {
   color: rgb(231, 230, 227);
+  
 }
 #dark a:hover {
   background-color: white;
@@ -46,22 +49,6 @@ article {
   max-width: 800px;
   padding: 0 20px;
   text-align: center;
-}
-
-.landingpage {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  margin-right: 300px;
-  margin-top: 25px;
-}
-
-img {
-  border-radius: 50%;
-  justify-content: center;
-  width: 50%;
-
-  margin-left: 140px;
 }
 
 .nav-link {
@@ -109,6 +96,21 @@ label {
   width: 90px;
   /* text-align: right; */
 }
+.repo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  width: 400px;
+  padding: 5em;
+  border: 1px solid #ccc;
+  background-color: gray;
+  color: white;
+
+  border-radius: 10px;
+}
+
 
 input,
 textarea {
@@ -150,21 +152,6 @@ button:hover {
     margin-top: 25px;
   }
 
-  .profile-pic {
-    border: 1px solid black;
-    border-radius: 50%;
-    width: 25%;
-    height: 50%;
-    margin-left: 15px;
-  }
-  .landingpage {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    margin-right: 100px;
-    margin-top: 50px;
-  }
-
   p {
     font-size: 1rem;
     margin-left: 10px;
@@ -175,12 +162,5 @@ button:hover {
     flex-direction: row;
     justify-content: space-between;
     margin-left: 10px;
-  }
-  img {
-    border: 1px solid black;
-    border-radius: 50%;
-    width: 20%;
-    height: 50%;
-    margin-left: 140px;
   }
 }
