--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,32 @@
   padding: 0;
   box-sizing: border-box;
 }
-body .Home {
-  height: 100vh;
-  width: 100vw;
 
-  border-radius: 10px;
-  box-shadow: black;
+#profile {
+  padding: 5px;
+  height: 100%;
+  width: 250px;
+  border: 1px solid black;
 }
 
+#profile #avatar {
+  height: 195px;
+  width: 195px;
+  border-radius: 50%;
+  border: 1px solid black;
+  margin: 10px;
+}
+
+ul li{
+  list-style: none;
+  padding: 5px;
+  display: flex;
+  width: 100px;
+  border-radius: 100px;
+  font-size: 12px;
+  border: 1px solid black;
+  margin: 10px;
+}
 h1 {
   font-size: 2rem;
 
@@ -23,7 +41,7 @@ h1 {
 }
 
 #light {
-  background-color: rgb(215, 192, 192);
+  /* background-color: rgb(215, 192, 192); */
   font-size: 20px;
 }
 #light .nav-link a {
@@ -38,7 +56,6 @@ h1 {
 
 #dark .nav-link {
   color: rgb(231, 230, 227);
-  
 }
 #dark a:hover {
   background-color: white;
@@ -110,7 +127,6 @@ label {
 
   border-radius: 10px;
 }
-
 
 input,
 textarea {
