--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 #profile {
   padding: 5px;
-  height: 100%;
+  height: 100vh;
   width: 250px;
   border: 1px solid black;
 }
@@ -18,30 +18,23 @@
   border: 1px solid black;
   margin: 10px;
 }
-
-ul li{
-  list-style: none;
-  padding: 5px;
-  display: flex;
-  width: 100px;
-  border-radius: 100px;
-  font-size: 12px;
+#avatar img {
   border: 1px solid black;
-  margin: 10px;
+  height: 100%;
+  width: 100%;
+  border-radius: inherit;
 }
+
 h1 {
   font-size: 2rem;
-
   text-align: center;
   margin: 0 auto;
   padding: 1rem;
-
   border-radius: 10px;
   box-shadow: black;
 }
 
 #light {
-  /* background-color: rgb(215, 192, 192); */
   font-size: 20px;
 }
 #light .nav-link a {
