--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,9 @@
   padding: 5px;
   height: 100vh;
   width: 250px;
-  border: 1px solid black;
+  border: 3px solid black;
+  border-radius: 10px;
+  background-color: rgb(210, 108, 163);
 }
 
 #profile #avatar {
@@ -60,116 +62,10 @@ article {
   padding: 0 20px;
   text-align: center;
 }
+.buttons {
+  justify-content: space-around;
+  margin: 5px;
 
-.nav-link {
-  display: flex;
-  padding: 10px;
-  align-items: center;
-  max-width: 960px;
-  margin: 0 auto;
-  border-bottom: 1px solid black;
-  margin-bottom: 40px;
-
-  color: black;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.nav-link:hover {
-  color: whitesmoke;
-  background-color: black;
-  border-radius: 10px;
-}
-.nav-links {
-  display: flex;
-  gap: 15px;
-  align-items: center;
-  justify-content: space-between;
-  max-width: 960px;
-  margin: 0 auto;
-  border-bottom: 1px solid #e2e2e2;
-  margin-bottom: 40px;
-}
-
-form {
-  margin: 0 auto;
-  width: 400px;
-  padding: 5em;
-  border: 1px solid #ccc;
-  background-color: gray;
-  color: white;
-
-  border-radius: 10px;
-}
-
-label {
-  display: inline-block;
-  width: 90px;
-  /* text-align: right; */
-}
-.repo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
-  width: 400px;
-  padding: 5em;
-  border: 1px solid #ccc;
-  background-color: gray;
-  color: white;
-
-  border-radius: 10px;
-}
-
-input,
-textarea {
-  font: 1em sans-serif;
-  padding: 0.5em;
-  width: 300px;
-  box-sizing: border-box;
-  margin-top: 10px;
   border-radius: 5px;
-}
-
-textarea {
-  vertical-align: middle;
-  height: 5em;
-}
-
-.submit {
-  padding-left: 90px;
-}
-
-/* button {
-  margin-top: 15px;
-  border-radius: 3px;
-  margin-left: 50%;
-  width: 60px;
-  cursor: pointer;
-  transition: 0.3s;
-/* }  */
-button:hover {
-  background: black;
-  color: white;
-}
-
-@media (max-width: 768px) {
-  .nav-links {
-    display: flex;
-    flex-direction: column;
-    margin-right: 300px;
-    margin-top: 25px;
-  }
-
-  p {
-    font-size: 1rem;
-    margin-left: 10px;
-  }
-
-  .links {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-left: 10px;
-  }
+  box-shadow: black;
 }
