--- a/src/index.css
+++ b/src/index.css
@@ -4,17 +4,15 @@
   box-sizing: border-box;
 }
 body {
-  background-color: rgb(220, 218, 220);
-  overflow: hidden;
- 
+  background-color: lightslategray;
 }
 #profile {
   background-color: lightslategrey;
   padding: 5px;
   height: 100vh;
   width: 250px;
-  border: 3px solid black;
-  border-radius: 10px;
+  /* border: 3px solid black; */
+  /* border-radius: 10px; */
 }
 
 #profile #avatar {
@@ -31,6 +29,10 @@ body {
   border-radius: inherit;
 }
 
+#data-card {
+  height: 90%;
+  width: 280px;
+}
 h1 {
   font-size: 2rem;
   text-align: center;
@@ -40,12 +42,6 @@ h1 {
   box-shadow: black;
 }
 
-#light {
-  font-size: 20px;
-}
-#light .nav-link a {
-  color: black;
-}
 
 article {
   margin: 0 auto;
@@ -70,28 +66,81 @@ a .buttons {
   text-decoration: none;
   color: black;
 }
+#user-data {
+  height: 80%;
+  width: 265px;
+  margin: 10px;
+  font-size: 18px;
+
+}
+#paginate {
+  position: relative;
+  margin-top: 50px;
+}
+
+#outlet {
+  margin-top: 50px;
+}
 a {
   text-decoration: none;
 
   color: black;
 }
- .btns {
+.btns {
   padding: 5px;
   font-size: 15px;
   display: flex;
   justify-content: space-around;
   margin: 5px;
- 
+
   cursor: pointer;
   border-radius: 5px;
   box-shadow: black;
 }
 
-@media all and (max-width: 768px) {
+@media screen and (max-width: 768px) {
+  .Home {
+    flex-direction: column;
+    width: screen;
+    border: 1px solid black;
+    min-height: 800px;
+  }
   #profile {
+    height: fit-content;
+    padding: 5px 2px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
+  }
+  #profile #avatar {
+    height: 50px;
+    width: 50px;
+  }
+  #profile-section {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  #data-card {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  #user-data {
+    width: 180px;
+    height: 180px;
+    font-size: 7px;
 
-  color: white;
-  
-  } 
-  
- }
+    border: none;
+  }
+  #paginate {
+    top: 480px;
+    left: 143px;
+    position: absolute;
+  }
+  #outlet {
+    margin-top: 160px;
+  }
+}
