--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,7 @@ body {
   padding: 5px;
   height: 100vh;
   width: 250px;
-  /* border: 3px solid black; */
-  /* border-radius: 10px; */
+  
 }
 
 #profile #avatar {
@@ -30,18 +29,21 @@ body {
 }
 
 #data-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: 90%;
-  width: 280px;
+  
 }
 h1 {
   font-size: 2rem;
   text-align: center;
   margin: 0 auto;
   padding: 1rem;
-  border-radius: 10px;
+  
   box-shadow: black;
 }
-
 
 article {
   margin: 0 auto;
@@ -54,6 +56,7 @@ article {
   margin: 5px;
   cursor: pointer;
   border-radius: 5px;
+  font-style: bolder;
   font-size: 15px;
   box-shadow: black;
 }
@@ -71,7 +74,6 @@ a .buttons {
   width: 265px;
   margin: 10px;
   font-size: 18px;
-
 }
 #paginate {
   position: relative;
@@ -98,7 +100,7 @@ a {
   box-shadow: black;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 667px) {
   .Home {
     flex-direction: column;
     width: screen;
@@ -125,19 +127,21 @@ a {
   }
   #data-card {
     display: flex;
+    flex-direction: column;
+    padding: 10px;
+
     flex-wrap: wrap;
-    justify-content: space-around;
+    
+    justify-content: space-between;
   }
   #user-data {
-    width: 180px;
+    
     height: 180px;
     font-size: 7px;
-
-    border: none;
   }
   #paginate {
-    top: 480px;
-    left: 143px;
+   
+    left: 100px;
     position: absolute;
   }
   #outlet {
