--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,21 @@
 }
 body {
   background-color: lightslategray;
+ 
 }
+ 
+
 #profile {
-  background-color: lightslategrey;
   padding: 5px;
   height: 100vh;
   width: 250px;
-  
 }
-
+#light {
+  background-color: white;
+}
+#dark {
+  background-color: lightslategrey;
+}
 #profile #avatar {
   height: 195px;
   width: 195px;
@@ -34,14 +40,14 @@ body {
   justify-content: center;
   align-items: center;
   height: 90%;
-  
 }
 h1 {
   font-size: 2rem;
   text-align: center;
   margin: 0 auto;
   padding: 1rem;
-  
+  font-family: cursive;
+
   box-shadow: black;
 }
 
@@ -63,12 +69,11 @@ article {
   box-shadow: black;
 }
 
-
 a .buttons {
   border-radius: 5px;
   text-decoration: none;
   background-color: black;
-  color: white
+  color: white;
 }
 #user-data {
   height: 80%;
@@ -86,7 +91,6 @@ a .buttons {
 }
 a {
   text-decoration: none;
-  
 
   color: black;
 }
@@ -96,13 +100,22 @@ a {
   display: flex;
   justify-content: space-around;
   margin: 5px;
-background-color: black;
+  background-color: black;
   color: white;
   cursor: pointer;
   border-radius: 5px;
   /* box-shadow: black; */
 }
-
+.switch {
+  display: flex;
+  justify-content:left ;
+  align-items: left;
+  cursor: pointer;
+  /* width: 100vw; */
+  /* height: 100px; */
+  /* border-radius: 5px; */
+  font-size: 10px;
+}
 @media screen and (max-width: 667px) {
   .Home {
     flex-direction: column;
@@ -134,16 +147,14 @@ background-color: black;
     padding: 10px;
 
     flex-wrap: wrap;
-    
+
     justify-content: space-between;
   }
   #user-data {
-    
     height: 180px;
     font-size: 7px;
   }
   #paginate {
-   
     left: 100px;
     position: absolute;
   }
