--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   font-family: "Outfit", sans-serif;
 }
 body {
-  /* font-family: "Roboto", sans-serif; */
+  font-family: "Outfit", sans-serif;
   background: url(https://images.unsplash.com/photo-1571171637578-41bc2dd41cd2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80);
 }
 
@@ -16,15 +16,7 @@ body {
   height: 100vh;
   width: 250px;
 }
-.profile-details {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  border-radius: 5px;
-}
+
 #desc a {
   text-decoration: none;
 }
@@ -32,7 +24,6 @@ body {
   height: 195px;
   width: 195px;
   border-radius: 50%;
-
   margin: 10px;
 }
 #avatar img {
@@ -40,13 +31,13 @@ body {
   width: 100%;
   border-radius: inherit;
 }
-#bio {
+#bionic {
   margin: 10px;
   font-size: 20px;
   color: white;
   text-align: center;
 }
-  h3 {
+.repo_name {
   margin: 15px;
   font-size: 18px;
   color: white;
@@ -56,12 +47,13 @@ body {
 
 #data-card {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  height: 90%;
-  width: 100;
+  height: 100%;
+  width: 100%;
 }
+
 h1 {
   color: white;
   text-align: center;
@@ -72,17 +64,15 @@ h1 {
   color: white;
 }
 article {
-  margin: 0 auto;
-  max-width: 800px;
-  padding: 0 20px;
-  text-align: center;
+  border: 1px solid green;
+  align-items: center;
+  width: fit-content;
 }
 .buttons {
   justify-content: space-around;
   margin: 5px;
   cursor: pointer;
   background-color: white;
-  /* color: white; */
   border-radius: 5px;
   font-style: bolder;
   font-size: 15px;
@@ -97,7 +87,6 @@ a .buttons {
 }
 button {
   border: none;
-  /* background-color: white; */
   cursor: pointer;
   font-size: 1rem;
   color: black;
@@ -105,21 +94,12 @@ button {
   border-radius: 5px;
   padding: 5px;
 }
-#user-data {
-  border: 4px solid black;
-  display: grid;
-  max-width: 1140px;
-  margin: auto;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 40px;
-  padding: 20px;
-  width: 50%;
-  height: 100%;
-  color: white;
-  background: grey;
-  text-align: center;
-  text-decoration: none;
-}
+/* .user-data {
+  border: 5px solid white;
+  border-radius: 10px;
+  width: 350px;
+  height: 400px;
+} */
 #paginate {
   position: relative;
   margin-top: 50px;
@@ -147,4 +127,69 @@ a {
   margin: 5px;
   font-size: 30px;
   margin-left: 60px;
+}
+
+@media screen and (max-width: 1024px) {
+  .Home {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #profile {
+    margin: auto;
+    background: black;
+    opacity: 0.6;
+    display: grid;
+    border: 5px solid wheat;
+    width: 100%;
+    height: fit-content;
+    z-index: 1;
+    top: 0;
+    position: relative;
+  }
+  #profile #avatar {
+    margin-left: 120px;
+    width: 195px;
+  }
+  .user-data {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 250px;
+    color: white;
+    background: grey;
+    text-align: center;
+    text-decoration: none;
+    font-size: 10px;
+  }
+  .repo_name {
+    /* border: 1px solid black; */
+    display: flex;
+    justify-self: center;
+    font-size: 10px;
+    align-items: center;
+  }
+  #icons {
+    display: inline-block;
+    font-size: 20px;
+    /* margin-left: 60px; */
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .user-data{ 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+  }
+  article {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    word-wrap: normal;
+    color: white;
+    width: 300px;
+    height: fit-content;
+  }
 }
